<resources>
    <string name="app_name">Careers</string>
    <string name="title_job_detail">Job detail</string>
    <string name="not_connected">Not connected</string>
    <string name="fetch_jobs_failed">Update failed</string>
    <string name="app_label">Careers</string>
    <string name="search_title">Search jobs</string>
    <string name="search_hint">Search jobs</string>
    <string name="version_toast">Careers v%1$s (%2$d)</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">About this app</string>
    <string name="pref_title_developer">Developer</string>
    <string name="pref_title_version">Version</string>
    <string name="pref_title_generated">Timestamp</string>
    <string name="pref_title_last_updated">Last fetched</string>
    <string name="settings_title">Settings</string>
    <string name="feedback_title">Feedback</string>
    <string name="developer_summary">xgusties.com</string>
    <string name="pref_category_application">Application</string>
    <string name="pref_category_dataset">Dataset</string>
    <string name="pref_category_search">Search</string>
    <string name="pref_title_clear_search_history">Clear Search History</string>
</resources>
