<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_category_application">

    <Preference
        android:key="developer"
        android:summary="-"
        android:title="@string/pref_title_developer" />

    <Preference
        android:key="version"
        android:summary="-"
        android:title="@string/pref_title_version" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_dataset">

        <Preference
            android:key="generated"
            android:summary="-"
            android:title="@string/pref_title_generated" />

        <Preference
            android:key="last_updated"
            android:summary="-"
            android:title="@string/pref_title_last_updated" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_search">

        <Preference
            style="?android:preferenceInformationStyle"
            android:key="clear_search_history"
            android:enabled="true"
            android:title="@string/pref_title_clear_search_history" />

    </PreferenceCategory>

</PreferenceScreen>
